--- a/css/ppp.html
+++ b/css/ppp.html
@@ -3,31 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> <!-- Bootstrap CSS -->
+    <title>Profile Card Toggle</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <style>
+        .profile-card {
+            display: none; /* Hide the profile card initially */
+        }
+        .profile-img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+        }
+        .btn-outline-primary {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3 mt-4">
-                <button type="button" class="btn btn-primary" id="showProfileBtn">User Profile</button>
-                <div class="card profile-card" id="profileCard" style="display: none;">
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <!-- Button to toggle the profile card -->
+                <button id="toggleProfileCardBtn" class="btn btn-primary mb-3">Show Profile</button>
+                
+                <!-- Profile Card -->
+                <div class="card profile-card" id="profileCard">
+                    <div class="card-header">
+                        <img src="https://geopulsea.com/image/transparent_logo.png" alt="Profile Image" class="profile-img">
+                        <a href="logout.php" class="btn mb-4"><i class="fas fa-power-off" style="color: red;"></i></a>
+                    </div>
                     <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <img src="https://geopulsea.com/image/transparent_logo.png" alt="Profile Image" class="profile-img">
-                            <a href="logout.php" class="btn mb-4"><i class="fas fa-power-off" style="color: red;"></i></a>
-                        </div>
-                        <h2 class="text-success mt-3 text-center pb-5 fw-bold">User Profile</h2>
-                        <div class="profile-row">
-                            <p class="text text-center text-start"><strong class="ms-5">Full Name:</strong> <?php echo htmlspecialchars($user['username']); ?></p>
-                            <p class="text text-center text-start"><strong class="ms-5">Email:</strong> <?php echo htmlspecialchars($user['email']); ?></p>
-                        </div>
-                        <div class="profile-row">
-                            <p class="text text-center text-start"><strong class="ms-5">Contact No:</strong> <?php echo htmlspecialchars($user['contact_no']); ?></p>
-                            <p class="text text-center text-start"><strong class="ms-5">Occupation:</strong> <?php echo htmlspecialchars($user['occupation']); ?></p>
-                        </div>
+                        <p class="text text-center"><strong class="ms-5">Full Name:</strong> <?php echo htmlspecialchars($user['username']); ?></p>
+                        <p class="text text-center"><strong class="ms-5">Email:</strong> <?php echo htmlspecialchars($user['email']); ?></p>
+                        <p class="text text-center"><strong class="ms-5">Contact No:</strong> <?php echo htmlspecialchars($user['contact_no']); ?></p>
+                        <p class="text text-center"><strong class="ms-5">Occupation:</strong> <?php echo htmlspecialchars($user['occupation']); ?></p>
                         <button type="button" class="btn btn-outline-primary mt-3 text-center">Back</button>
                     </div>
                 </div>
@@ -35,17 +44,21 @@
         </div>
     </div>
 
-    <!-- Include Bootstrap JS and dependencies (Optional for additional functionality) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <!-- Custom JavaScript -->
     <script>
-        document.getElementById('showProfileBtn').addEventListener('click', function() {
+        document.getElementById('toggleProfileCardBtn').addEventListener('click', function() {
             var profileCard = document.getElementById('profileCard');
-            profileCard.style.display = profileCard.style.display === 'none' ? 'block' : 'none';
+            if (profileCard.style.display === 'none' || profileCard.style.display === '') {
+                profileCard.style.display = 'block';
+                this.textContent = '';
+            } else {
+                profileCard.style.display = 'none';
+                this.textContent = 'Show Profile';
+            }
         });
     </script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
