--- a/index.html
+++ b/index.html
@@ -42,42 +42,36 @@
                     <span class="toggle-text toggle-text-right">Maharashtra</span>
                 </label>
             </div>
-            <div class="card">
-                <div class="card-body">
-                    <form method="post" action="" enctype="multipart/form-data">
-                        <div class="form-group row">
-                            <label for="input1" class="col-form-label">District</label>
-                            <div>
-                                <select class="form-control" name="input1" id="input1"></select>
+               <div class="card">
+                    <div class="card-body">
+                        <form method="post" action="" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label for="input1" class="col-form-label">District</label>
+                                <select class="form-control" name="input1" id="input1">
+                                    <option>Ahmednagar</option>
+                                </select>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="input2" class="col-form-label">Taluka</label>
-                            <div>
+                            <div class="form-group">
+                                <label for="input2" class="col-form-label">Taluka</label>
                                 <select class="form-control" name="input2" id="input2"></select>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="input3" class="col-form-label">Village</label>
-                            <div>
+                            <div class="form-group">
+                                <label for="input3" class="col-form-label">Village</label>
                                 <select class="form-control" name="input3" id="input3"></select>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="input4" class="col-form-label">Survey No</label>
-                            <div>
+                            <!-- <div class="form-group">
+                                <label for="input4" class="col-form-label">Survey No</label>
                                 <input type="text" class="form-control" name="input4" id="input4">
-                            </div>
-                        </div>
-                    </form>
+                            </div> -->
+                        </form>
+                    </div>
                 </div>
-            </div>
         </div>
         <div class="map-container">
             <div id="map"></div>
             <div class="message-container">
                 <p>आमच्या मोजणी पोर्टलच्या सहाय्याने, तुम्हाला तुमच्या भाग योजना सर्वेक्षणाची माहिती तसेच ई-नकाशा म्हणजे जमिनीच्या नकाशाची माहिती मिळेल.</p>
-                <button class="btn btn-primary">OK</button>
+                <button class="btn">Proceed</button>
             </div>
         </div>
     </div>
