--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="mainmodal/legend.css">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8QyQ46cDfL"
-        crossorigin="anonymous"></script>
+        integrity="sha384-1rLwktGgCwXh/q6TAE9S+04phOMikc/I/qNHvVpU2R7tW0AYF6CWmblF6I6ENRyu" crossorigin="anonymous"></script>
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -64,12 +63,6 @@
                                 <select class="form-control" name="input3" id="input3"></select>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label for="input4" class="col-form-label">Survey No</label>
-                            <div>
-                                <input type="text" class="form-control" name="input4" id="input4">
-                            </div>
-                        </div>
                     </form>
                 </div>
             </div>
@@ -78,7 +71,8 @@
             <div id="map"></div>
             <div class="message-container">
                 <p>आमच्या मोजणी पोर्टलच्या सहाय्याने, तुम्हाला तुमच्या भाग योजना सर्वेक्षणाची माहिती तसेच ई-नकाशा म्हणजे जमिनीच्या नकाशाची माहिती मिळेल.</p>
-                <button class="btn btn-primary">OK</button>
+
+                <button class="btn btn-primary" onclick="redirectToLogin()">NEXT   <i class="fas fa-arrow-right"></i></button>
             </div>
         </div>
     </div>
@@ -90,5 +84,11 @@
     <script src="js/index.js"></script>
     <script src="mainmodal/legend.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+    <script>
+        function redirectToLogin() {
+            window.location.href = 'login.php'; 
+        }
+    </script>
 </body>
 </html>
