--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
                                 <label for="input3" class="col-form-label">Village</label>
                                 <select class="form-control" name="input3" id="input3"></select>
                             </div>
-                            <!-- <div class="form-group">
-                                <label for="input4" class="col-form-label">Survey No</label>
-                                <input type="text" class="form-control" name="input4" id="input4">
-                            </div> -->
+                          
                         </form>
                     </div>
                 </div>
@@ -71,7 +68,8 @@
             <div id="map"></div>
             <div class="message-container">
                 <p>आमच्या मोजणी पोर्टलच्या सहाय्याने, तुम्हाला तुमच्या भाग योजना सर्वेक्षणाची माहिती तसेच ई-नकाशा म्हणजे जमिनीच्या नकाशाची माहिती मिळेल.</p>
-                <button class="btn">Proceed</button>
+                <!-- <button class="btn">Proceed</button> -->
+                <a href="login.php" class="btn">Proceed</a>
             </div>
         </div>
     </div>
