--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mojani</title>
-        <link rel="icon" href="image/geopulse_logo-removebg-preview.png"
+        <link rel="icon" href="image/LOGO_DP_Zoning.png"
             type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="css/index_new.css">
         <link rel="stylesheet" href="mainmodal/legend.css">
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="form-container">
                 <a class="Geo" href="#"><img
-                        src="image/geopulse_logo-removebg-preview.png" alt></a>
+                        src="image/LOGO_DP_Zoning.png" alt></a>
                 <div class="toggle-switch">
                     <input type="checkbox" id="toggle" class="toggle-input">
                     <label for="toggle" class="toggle-label">
