--- a/index.html
+++ b/index.html
@@ -64,18 +64,20 @@
                 <div class="location-wrapper">
                     <div class="location-input-container">
                         <button class="location-button" onclick="toggleCard()">
-                            <span> Select my location </span> <i class="fas fa-plus"></i>
+                            <span> Select my location </span> <i
+                                class="fas fa-plus"></i>
                         </button>
                     </div>
-                    <img src="./image/Pin_alt_fill.png" alt="Map Marker" class="location-icon" onclick="LiveLocation()">
+                    <img src="./image/Pin_alt_fill.png" alt="Map Marker"
+                        class="location-icon" onclick="LiveLocation()">
                     <div id="output"></div>
                 </div>
-                
 
                 <!-- Card -->
                 <div class="card" id="locationCard">
                     <div class="card-body">
-                        <i class="fas fa-times cancel-icon" onclick="toggleCard()"></i>
+                        <i class="fas fa-times cancel-icon"
+                            onclick="toggleCard()"></i>
                         <form method="post" action
                             enctype="multipart/form-data">
                             <div class="form-group mt-1">
@@ -113,8 +115,9 @@
                     <p>आमच्या मोजणी पोर्टलच्या सहाय्याने, तुम्हाला तुमच्या भाग
                         योजना सर्वेक्षणाची माहिती तसेच ई-नकाशा म्हणजे जमिनीच्या
                         नकाशाची माहिती मिळेल.</p>
-                    <button class="btn" onclick="window.location.href='login.php';">Proceed</button>
-                   
+                    <button class="btn"
+                        onclick="window.location.href='login.php';">Proceed</button>
+
                 </div>
             </div>
         </div>
@@ -148,7 +151,7 @@
         }
     </script>
 
-<script>
+        <script>
    
 // Add a tile layer to the map (ensure this URL is valid)
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -184,7 +187,7 @@ function success(pos) {
 
     // Add a new marker at the current location
     marker = L.marker([lat, lng]).addTo(map)
-        .bindPopup('You are here')
+        .bindPopup(`Location Coordinates: ${lat.toFixed(4)}, ${lng.toFixed(4)}`)
         .openPopup();
 }
 
@@ -198,6 +201,6 @@ function error(err) {
 }
 
 
-    </script>     
+    </script>
     </body>
 </html>
